--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "alzo02/laravel-dotpay",
+    "name": "pawelsome/laravel-dotpay",
     "description": "Laravel 5 Dotpay",
     "authors": [
         {
