--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-         "illuminate/support": "5.0.x|5.1.x|5.5.x"
+        "php": ">=5.5.9"
     },
     "autoload": {
       "psr-4": {
