--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Laravel 5 Dotpay",
     "authors": [
         {
-            "name": "Alzo02",
-            "email": "alzo02@icloud.com"
+            "name": "test",
+            "email": "test@test.com"
         }
     ],
     "require": {
